RESOLVED FIXED279474
Initial animations don't clear if the text replacments come in quickly, like for a list.
https://bugs.webkit.org/show_bug.cgi?id=279474
Summary Initial animations don't clear if the text replacments come in quickly, like ...
Megan Gardner
Reported 2024-09-10 16:26:25 PDT
Initial animations don't clear if the text replacments come in quickly, like for a list.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-10 16:26:34 PDT
Megan Gardner
Comment 2 2024-09-10 16:29:44 PDT
EWS
Comment 3 2024-09-12 09:39:24 PDT
Committed 283561@main (6d738e331c97): <https://commits.webkit.org/283561@main> Reviewed commits have been landed. Closing PR #33432 and removing active labels.
EWS
Comment 4 2024-09-16 14:59:06 PDT
Committed 280938.339@safari-7619-branch (e99a4acc1d02): <https://commits.webkit.org/280938.339@safari-7619-branch> Reviewed commits have been landed. Closing PR #1781 and removing active labels.
EWS
Comment 5 2024-09-18 16:11:28 PDT
Committed 283286.74@safari-7620-branch (5865cb5a021b): <https://commits.webkit.org/283286.74@safari-7620-branch> Reviewed commits have been landed. Closing PR #1825 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.