[Writing Tools] Initial animations don't clear if the text replacments come in quickly, like for a list. https://bugs.webkit.org/show_bug.cgi?id=279474 rdar://135760174

Reviewed by Aditya Keerthi.

If the animations come in too quickly, we don't keep the UUID for the previous initial
animation around, and it ends up animating infinitely. We should clear any initial
animation that is active before starting a new one.

* Source/WebKit/WebProcess/WebPage/Cocoa/TextAnimationController.mm:
(WebKit::TextAnimationController::addInitialTextAnimationForActiveWritingToolsSession):

Canonical link: https://commits.webkit.org/283561@main